# estat_api_dlt_helper

./: CONTRIBUTING.md  README.md  SECURITY.md  mise.toml  mkdocs.yml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  zizmor.yml
docs/: api.md  index.md
docs/examples/: declarative_api_example.md
examples/: api_client_demo.py  basic_load_example.py  basic_parser_usage.py  pipeline_example.py  resource_example.py
src/estat_api_dlt_helper/: __init__.py
src/estat_api_dlt_helper/api/: client.py
src/estat_api_dlt_helper/config/: __init__.py  models.py
src/estat_api_dlt_helper/loader/: dlt_pipeline.py  dlt_resource.py  estat_source.py  estat_table.py  load_manager.py  unified_schema_resource.py
src/estat_api_dlt_helper/models/: estat_models.py
src/estat_api_dlt_helper/parser/: arrow_converter.py
src/estat_api_dlt_helper/utils/: __init__.py  arrow_utils.py
tests/: conftest.py
tests/fixtures/: SampleResponse1752633595900.json
tests/integration/: helpers.py  test_estat_source_integration.py  test_parse_response_integration.py  test_skip_if_not_updated.py
tests/unit/: test_api_client.py  test_arrow_converter.py  test_config.py  test_estat_source.py  test_models.py  test_parser.py  test_timeout_passthrough.py
