[project]
name = "estat-api-dlt-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "K-Oxon", email = "ko1011qfp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
